# workflowtest

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  README.md  Taskfile.yml  gen_api_nav.py  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: bump_version.yml  ci.yaml  cz_bump_version.yml  poetry_action.yml  publish_site.yml  tags.yml
changelog/: index.html
docs/: changelog.md  gen_api_nav.py  gen_examples.py
examples/: index.html  test.py
reference/SUMMARY/: index.html
reference/docs/gen_api_nav/: index.html
reference/docs/gen_examples/: index.html
reference/examples/test/: index.html
reference/src/workflowtest/cfg/config/: index.html
reference/src/workflowtest/main/: index.html
reference/tests/test_import/: index.html
search/: search_index.json
src/workflowtest/: __init__.py  main.py
src/workflowtest/cfg/: __init__.py  config.py  settings.yaml
tests/: test_import.py
